--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,13 @@
 model:
-  target: Models.interpretable_diffusion.gaussian_diffusion.Diffusion_TS
+  target: model.gaussian_diffusion.Diffusion_TS
   params:
-    seq_length: 160
-    feature_size: 5
+    seq_length: 512
+    feature_size: 9
     n_layer_enc: 1
     n_layer_dec: 2
     d_model: 64  # 4 X 16
-    timesteps: 200
-    sampling_timesteps: 200
+    timesteps: 512
+    sampling_timesteps: 512
     loss_type: 'l1'
     beta_schedule: 'cosine'
     n_heads: 4
@@ -20,7 +20,7 @@ model:
 solver:
   base_lr: 1.0e-5
   max_epochs: 1000
-  results_folder: ./Checkpoints_syn
+  results_folder: ./Checkpoints
   gradient_accumulate_every: 2
   save_cycle: 100  # max_epochs // 10
   ema:
@@ -28,7 +28,7 @@ solver:
     update_interval: 10
   
   scheduler:
-    target: engine.lr_sch.ReduceLROnPlateauWithWarmup
+    target: lr_sch.ReduceLROnPlateauWithWarmup
     params:
       factor: 0.5
       patience: 200
@@ -38,3 +38,9 @@ solver:
       warmup_lr: 8.0e-4
       warmup: 100 
       verbose: False
+
+dataset:
+  batch_size: 8
+  samples:
+    num_sample: 200
+    size_every: 10
