--- a/mamba_config.yaml
+++ b/mamba_config.yaml
@@ -12,17 +12,24 @@ model:
   backbone:
     target: model.transformer.Transformer
     params:
-        n_layer_enc: 4
-        n_layer_dec: 4
-        d_model: 64
-        n_head : 4
-        mlp_hidden_times: 4
-        attn_pdrop: 0.1
-        resit_pdrop: 0.1
-        kernel_size: 5
-        padding_size: 2
-
-
+      n_layer_enc: 4
+      n_layer_dec: 4
+      d_model: 64
+      n_head : 4
+      mlp_hidden_times: 4
+      attn_pdrop: 0.1
+      resit_pdrop: 0.1
+      kernel_size: 5
+      padding_size: 2
+      use_mamba: True
+        
+    mamba:
+      d_inner: 64 
+      dt_rank: 4
+      d_conv: 5
+      d_state: 16
+      linear_bias: False
+      conv_bias: True
 
 solver:
   base_lr: 1.0e-5
