--- a/config.yaml
+++ b/config.yaml
@@ -1,22 +1,29 @@
 model:
   target: model.gaussian_diffusion.Diffusion_TS
   params:
-    seq_length: 512
-    feature_size: 9
-    n_layer_enc: 4
-    n_layer_dec: 4
-    d_model: 64  # 4 X 16
+    seq_length: 1024
+    feature_size: 12
     timesteps: 1024
     sampling_timesteps: 1024
     loss_type: 'l1'
     beta_schedule: 'cosine'
-    n_heads: 4
-    mlp_hidden_times: 4
-    attn_pd: 0.1
-    resid_pd: 0.1
-    kernel_size: 5
-    padding_size: 2
-    label_dim: 5
+    label_dim: 30
+
+  backbone:
+    target: model.transformer.Transformer
+    params:
+        n_layer_enc: 4
+        n_layer_dec: 4
+        d_model: 64
+        n_head : 4
+        mlp_hidden_times: 4
+        attn_pdrop: 0.1
+        resit_pdrop: 0.1
+        kernel_size: 5
+        padding_size: 2
+        use_mamba: True
+
+
 
 solver:
   base_lr: 1.0e-5
