--- a/mamba_config.yaml
+++ b/mamba_config.yaml
@@ -2,19 +2,19 @@ model:
   target: model.gaussian_diffusion.Diffusion_TS
   params:
     seq_length: 1024
-    feature_size: 12
+    feature_size: 24
     timesteps: 1024
     sampling_timesteps: 1024
     loss_type: 'l1'
-    beta_schedule: 'cosine'
-    label_dim: 30
+    beta_schedule: 'linear'
+    label_dim: 35
 
   backbone:
     target: model.transformer.Transformer
     params:
-      n_layer_enc: 4
-      n_layer_dec: 4
-      d_model: 64
+      n_layer_enc: 2
+      n_layer_dec: 8
+      d_model: 32
       n_head : 4
       mlp_hidden_times: 4
       attn_pdrop: 0.1
@@ -24,7 +24,7 @@ model:
       use_mamba: True
         
     mamba:
-      d_inner: 64 
+      d_inner: 32
       dt_rank: 4
       d_conv: 5
       d_state: 16
@@ -33,10 +33,10 @@ model:
 
 solver:
   base_lr: 1.0e-5
-  max_epochs: 30000
-  results_folder: ./Checkpoints
+  max_epochs: 10000
+  results_folder: ./Checkpoints_mamba
   gradient_accumulate_every: 2
-  save_cycle: 100  # max_epochs // 10
+  save_cycle: 1000  # max_epochs // 10
   ema:
     decay: 0.99
     update_interval: 10
@@ -54,7 +54,7 @@ solver:
       verbose: False
 
 dataset:
-  batch_size: 8
+  batch_size: 16
   samples:
-    num_sample: 200
-    size_every: 10
+    num_sample: 4000
+    size_every: 100
